- Changed image files to use XZ.
- Drop SSLv3 support. (HTTPS must use TLS)
- Drop LiveCD mode support with less than 2GB memory. (install/upgrade only)
  Supported minimum spec except LiveCD is 512MB memory + 512MB swap device or partition.
  1024MB swap device or partition is recommended.
  File based swap and ZFS volume swap is not recommended.
- Add WebGUI access restriction.
- Add NFS support in HAST service.
- Add default swap of 512MB for LiveUSB and before user configuration.
- Adjust number of Status|Processes.
- Add MBR partition to LiveUSB.
- Add log/mirrored log support in Disks|ZFS|Pools|Tools.
- Add expires HTTP header. (some js must be force reloaded.)
- Increase http upload size to 512MB.
- Remove last slash of the path added by filechooser.
- Add wait_on and spindown.
- Upgrade e2fsprogs to 1.42.12.
- Upgrade transmission to 2.84.
- Upgrade isboot to 0.2.8.
- Upgrade istgt to 20141125.
- Upgrade smartmontools 6.3
- Upgrade xmlstarlet to 1.6.1.
- Upgrade inadyn-mt to 02.24.43.
- Upgrade zoneinfo to 2014j.
- Upgrade php to 5.6.4.
- Upgrade mDNSResponder to 561.1.1.
- Upgrade xmd to 0.4.2.
- Upgrade bash 4.3 to patch 33.
- Upgrade unison to 2.48.3.
- Upgrade netatalk to 3.1.7.
- Upgrade samba to 4.1.16.
- Upgrade iperf3 to 3.0.11.

Fixes:
- ZFS pool cache is not removed when deleting or reseting to factory default.
- Missing /etc/uams/uams_randnum.so
- Missing nutdrv_atcl_usb nut driver.
- Never reject SMB3 and sendfile combination.
- Failed to mount NTFS with read-only.
- Missing mount_fusefs in /usr/local/sbin.
- Missing usb device configuration file.
- Missing default pkg repository.
- mount_ntfs is not installed to /sbin.
- Wrong variable in HAST script.
- /boot/kernel/fuse.ko is missing.
- /etc/platform is broken on full installation.
- Some DHCP setting of WebGUI does not work. 
- xmlrpc is broken.
- Missing GPT partition in Disks|ZFS|Pools|Tools.
- Switching DHCP and static IP cause unexpected behavior.