@@ -46,6 +46,8 @@
     mount          
     ..
     run            
+        wpa_supplicant
+        ..
     ..
     spool          
         lock           
